# orch

./: .gitignore  CLAUDE.md  CLAUDE_SNIPPET.md  MOBILE.md  README.md  pyproject.toml
orch/: __init__.py  __main__.py  app.py  bridge.py  container.py  discovery.py  iterm.py  lifecycle.py  logs.py  models.py  planner.py  setup.py
profiles/: orch-iterm2-profile.json
