[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orch"
version = "0.1.0"
description = "Claude session orchestrator"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.70.0",
    "watchdog>=4.0.0",
]

[project.scripts]
orch = "orch.__main__:main"
orch-setup = "orch.setup:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["orch*"]
